[gd_scene load_steps=9 format=2]

[ext_resource path="res://test_field.gd" type="Script" id=1]
[ext_resource path="res://player_life.gd" type="Script" id=2]
[ext_resource path="res://opp_life.gd" type="Script" id=3]
[ext_resource path="res://opp_placeholder.gd" type="Script" id=4]
[ext_resource path="res://player_placeholder.gd" type="Script" id=5]
[ext_resource path="res://test_creature_life.gd" type="Script" id=6]
[ext_resource path="res://test_creature.gd" type="Script" id=7]
[ext_resource path="res://player_mana.gd" type="Script" id=8]

[node name="test_field" type="Node2D"]
script = ExtResource( 1 )

[node name="player_placeholder" type="Label" parent="."]
margin_left = 456.0
margin_top = 368.0
margin_right = 566.0
margin_bottom = 431.0
text = "Player sprite will go here"
autowrap = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_life" type="Label" parent="player_placeholder"]
margin_left = 144.0
margin_right = 208.0
margin_bottom = 24.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_mana" type="Label" parent="player_placeholder"]
margin_left = 128.0
margin_top = 16.0
margin_right = 200.0
margin_bottom = 48.0
script = ExtResource( 8 )

[node name="opp_placeholder" type="Label" parent="."]
margin_left = 472.0
margin_top = 8.0
margin_right = 582.0
margin_bottom = 71.0
text = "Opponent sprite will go here"
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opp_life" type="Label" parent="opp_placeholder"]
margin_left = 120.0
margin_right = 176.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="targeting_button" type="Button" parent="opp_placeholder" groups=[
"targeting_buttons",
]]
show_behind_parent = true
margin_right = 110.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_creature" type="Label" parent="."]
margin_left = 176.0
margin_top = 136.0
margin_right = 286.0
margin_bottom = 199.0
text = "Creature sprite will go here"
autowrap = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_creature_life" type="Label" parent="test_creature"]
margin_left = 110.0
margin_right = 166.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_creature_button" type="Button" parent="test_creature" groups=[
"targeting_buttons",
]]
show_behind_parent = true
margin_right = 96.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hand_one" type="Position2D" parent="."]
position = Vector2( 128, 424 )

[node name="hand_two" type="Position2D" parent="."]
position = Vector2( 256, 512 )

[node name="hand_three" type="Position2D" parent="."]
position = Vector2( 384, 512 )

[node name="hand_four" type="Position2D" parent="."]
position = Vector2( 512, 512 )

[node name="hand_five" type="Position2D" parent="."]
position = Vector2( 640, 512 )

[node name="hand_six" type="Position2D" parent="."]
position = Vector2( 768, 512 )

[node name="hand_seven" type="Position2D" parent="."]
position = Vector2( 896, 512 )

[node name="guidance" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="opp_life_changed" from="." to="opp_placeholder/opp_life" method="_on_test_field_opp_life_changed"]
[connection signal="player_life_changed" from="." to="player_placeholder/player_life" method="_on_test_field_player_life_changed"]
[connection signal="player_mana_changed" from="." to="player_placeholder/player_mana" method="_on_test_field_player_mana_changed"]
[connection signal="pressed" from="opp_placeholder/targeting_button" to="." method="_on_targeting_button_pressed"]
[connection signal="dead" from="test_creature" to="test_creature" method="_on_test_creature_dead"]
[connection signal="pressed" from="test_creature/test_creature_button" to="." method="_on_test_creature_button_pressed"]
